--- a/css/main.css
+++ b/css/main.css
@@ -317,6 +317,10 @@ a.triangle{
   height: auto;
 }
 
+.row.multiImage img.rollImage{
+  width:100%!important
+{
+
 .title-bar{
   height: 39px!important;
 }
