--- a/css/main.css
+++ b/css/main.css
@@ -402,7 +402,8 @@ div#containerXp{
   }
 
   .headerArea{
-    row-gap:0px;
+    row-gap: 20px;
+    margin-bottom: 20px;
   }
   
   .headerArea span:first-child{
