--- a/css/main.css
+++ b/css/main.css
@@ -488,6 +488,10 @@ div#containerXp{
   .row.multiImage .col:nth-child(2) {
       align-items: center;
   }
+
+  .buttonLink:hover{
+  transform: scale(1.1);
+  }
 }
 
 /* Tab View */
@@ -562,6 +566,10 @@ div#containerXp{
   div.headerArea{
     margin-top: 20px;
     row-gap:0px!important;
+  }
+
+  .buttonLink:hover{
+  transform: scale(1.1);
   }
 
   .row.multiImage .col:nth-child(1) {
