--- a/css/main.css
+++ b/css/main.css
@@ -30,11 +30,13 @@ overflow:auto;
 body.fc-scroll{
   overflow: hidden!important;
   overscroll-behavior: none!important;
+  position: fixed!important;
 }
 
 .fc-scroll{
   overflow: hidden!important;
   overscroll-behavior: none!important;
+  position: fixed!important;
 }
 
 .layer1, .layer2 {
