--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,7 @@ body.fc-scroll{
   position: fixed!important;
   max-width: 100%;
   background-size: auto;
+  width: 100%!important;
 }
 
 .fc-scroll{
@@ -41,6 +42,7 @@ body.fc-scroll{
   position: fixed!important;
   max-width: 100%;
   background-size: auto;
+  width: 100%!important;
 }
 
 .layer1, .layer2 {
