--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ body.fc-scroll{
   overscroll-behavior: none!important;
   position: fixed!important;
   max-width: 100%;
-  background-size: auto;
+  background-size: auto!important;
   width: 100%!important;
   background-position: unset!important;
 }
@@ -42,7 +42,7 @@ body.fc-scroll{
   overscroll-behavior: none!important;
   position: fixed!important;
   max-width: 100%;
-  background-size: auto;
+  background-size: auto!important;
   width: 100%!important;
   background-position: unset!important;
 }
