--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 
 body {
   background-image: url("https://raw.githubusercontent.com/butterdogfun/butterassets.github.io/main/bg.png");
-  background-position: center;
+  background-position: auto;
   background-size: cover!important;
   background-repeat: no-repeat;
   overflow: hidden;
