--- a/css/main.css
+++ b/css/main.css
@@ -15,9 +15,10 @@ body {
 }
 
 div#footer {
-text-align:end;
-color: #AD7C1C;
-font-family: 'Inter', sans-serif;
+  text-align:end;
+  color: #AD7C1C;
+  font-family: 'Inter', sans-serif;
+  font-size:12px;
 }
   
 div#headerContainer {
