--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 /* Font From Google */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Pixelify+Sans:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Pixelify+Sans:wght@400;500;600;700&family=Press+Start+2P&display=swap');
 
 * {
   font-family: 'Times New Roman', sans-serif;
